--- a/git/git.html
+++ b/git/git.html
@@ -16,6 +16,10 @@
 		<li>git clone   //从远程仓库拷贝数据</li>
 		<li>git branch <name>   //创建分支 名为<name> </li>
 		<li>git checkout <name>   //切换到分支<name> </li>
+		<li>git checkout master   //切换回主线</li>
+		<li>git merge  <name>  //在切换回主线时 合并分支</li>
+
+
 	</ul>
 
 
@@ -36,6 +40,10 @@
 			创建.gitignore文件  把需要忽略的文件或文件夹名次写在.gitignore文件上
 			例如：log.txt  ／log       //忽略log.txt文件,log文件夹
 		</li>
+		<li>git branch 'branch_name' //创建分支</li>
+		<li>git checkout 'branch_name'  //切换到分支</li>
+		<li>git checkout mester  //切换到主线</li>
+		<li>git merge 'branch_name'  //在主线时 把分支合并到主线上</li>
 
 
 
