--- a/git/git.html
+++ b/git/git.html
@@ -45,7 +45,25 @@
 		<li>git checkout mester  //切换到主线</li>
 		<li>git merge 'branch_name'  //在主线时 把分支合并到主线上</li>
 
+	</ul>
 
+	<h2>github 操作</h2>
+	<ul>
+		<li>create a new repository   //创建仓库</li>
+		<li>
+		 	<p>git remote add origin github地址</p>
+		 	<p>git push -u origin master</p>
+		</li>
+		<li>git remote   //查看是否与远程连接</li>
+		
+		<li>git commit   //提交</li>
+		<li>git push   //推送到仓库</li>
+		<li>git pull   //从远程仓库拉取数据</li>
+		<li>git clone   //从远程仓库拷贝数据</li>
+		<li>git branch <name>   //创建分支 名为<name> </li>
+		<li>git checkout <name>   //切换到分支<name> </li>
+		<li>git checkout master   //切换回主线</li>
+		<li>git merge  <name>  //在切换回主线时 合并分支</li>
 
 
 	</ul>
