--- a/git/git.html
+++ b/git/git.html
@@ -42,7 +42,7 @@
 		</li>
 		<li>git branch 'branch_name' //创建分支</li>
 		<li>git checkout 'branch_name'  //切换到分支</li>
-		<li>git checkout mester  //切换到主线</li>
+		<li>git checkout master  //切换到主线</li>
 		<li>git merge 'branch_name'  //在主线时 把分支合并到主线上</li>
 
 	</ul>
