--- a/git/git.html
+++ b/git/git.html
@@ -50,21 +50,11 @@
 	<h2>github 操作</h2>
 	<ul>
 		<li>create a new repository   //创建仓库</li>
-		<li>
-		 	<p>git remote add origin github地址</p>
-		 	<p>git push -u origin master</p>
-		</li>
 		<li>git remote   //查看是否与远程连接</li>
+		<li>git remote add origin github地址  //与远程连接</li>
+		<li>git pull --rebase origin master  //更新远程仓库最新数据</li>
+		<li>git push -u origin master   //提交到远程仓库</li>
 		
-		<li>git commit   //提交</li>
-		<li>git push   //推送到仓库</li>
-		<li>git pull   //从远程仓库拉取数据</li>
-		<li>git clone   //从远程仓库拷贝数据</li>
-		<li>git branch <name>   //创建分支 名为<name> </li>
-		<li>git checkout <name>   //切换到分支<name> </li>
-		<li>git checkout master   //切换回主线</li>
-		<li>git merge  <name>  //在切换回主线时 合并分支</li>
-
 
 	</ul>
 </body>
