--- a/git/git.html
+++ b/git/git.html
@@ -15,7 +15,8 @@
 		<li>git pull   //从远程仓库拉取数据</li>
 		<li>git clone   //从远程仓库拷贝数据</li>
 		<li>git branch <name>   //创建分支 名为<name> </li>
-		<li>git checkout <name>   //切换到分支<name> </li>
+		<li>git checkout <name>   //切换到分支<name> </li> 
+		<li>git checkout -b <name>   //创建分支并切换到分支<name> </li> 	
 		<li>git checkout master   //切换回主线</li>
 		<li>git merge  <name>  //在切换回主线时 合并分支</li>
 
@@ -42,6 +43,7 @@
 		</li>
 		<li>git branch 'branch_name' //创建分支</li>
 		<li>git checkout 'branch_name'  //切换到分支</li>
+		<li>git checkout －b 'branch_name'  //创建分支并切换到分支</li>
 		<li>git checkout master  //切换到主线</li>
 		<li>git merge 'branch_name'  //在主线时 把分支合并到主线上</li>
 
@@ -51,6 +53,7 @@
 	<ul>
 		<li>create a new repository   //创建仓库</li>
 		<li>git remote   //查看是否与远程连接</li>
+		<li>git remote remove origin  //关闭与远程连接</li>
 		<li>git remote add origin github地址  //与远程连接</li>
 		<li>git pull --rebase origin master  //更新远程仓库最新数据</li>
 		<li>git push -u origin master   //提交到远程仓库</li>
