添加解决冲突

--- a/git/git.html
+++ b/git/git.html
@@ -43,9 +43,15 @@
 		</li>
 		<li>git branch 'branch_name' //创建分支</li>
 		<li>git checkout 'branch_name'  //切换到分支</li>
-		<li>git checkout －b 'branch_name'  //创建分支并切换到分支</li>
 		<li>git checkout master  //切换到主线</li>
 		<li>git merge 'branch_name'  //在主线时 把分支合并到主线上</li>
+		<li>vi 冲突文件      //merge冲突，解决冲突（vi）后，重新add commit</li>
+
+		<li><b>git checkout －b 'branch_name'  //创建分支并切换到分支</b></li>
+		<li><b>git commit －am '备注信息'  //add添加并提交备注</b></li>
+		<li>git reset --hard HEAD^   //返回上一版本</li>
+		<li>git reset --hard HEAD～n   //返回前n个版本</li>
+		<li>git reflog  //查看提交记录</li>
 
 	</ul>
 
