--- a/linly/projects.html
+++ b/linly/projects.html
@@ -32,16 +32,28 @@
 			</dd>
 			<dd>
 				<h4>微博钱包——旧手机换钱</h4>
-				<p>技术栈：</p>
+				<p>技术栈：实现的功能及方法</p>
 				<ul>
-					<li>1.</li>
+					<li>1.自定义顶部导航</li>
+					<li>2.自定义底部菜单</li>
 				</ul>
 			</dd>
 			<dd>
 				<h4>微信小程序——回收牛手机回收</h4>
-				<p>技术栈：</p>
+				<p>技术栈：遇到的问题及解决</p>
 				<ul>
-					<li>1.</li>
+					<li>
+						1.遮罩层点击穿透：遮罩外包裹一层设置z-index和透明度
+					</li>
+					<li>
+						2.遮罩底层滚动：使用scroll-view组件，弹窗时设置scroll-y为false
+					</li>
+					<li>
+						3.页面渲染慢显示空白：首屏加loading图
+					</li>
+					<li>
+						4.防重复点击：用一个变量的布尔值来控制是否执行后台的请求；等到第一次请求发出之后调整变量的值，等到有请求结果之后再次调整变量值，保证下次正常提交
+					</li>
 				</ul>
 			</dd>
 			<dd>
@@ -49,11 +61,14 @@
 				<p>技术栈：</p>
 				<ul>
 					<li>生活号</li>
-					<li>1.免费兑换 —— 滚动粘贴</li>
+					<li>1.免费兑换 —— tab粘滞定位 position:sticky</li>
 					<li>2.天天零钱 —— 领钱规则</li>
 					<li>3.福利 —— 提醒开关switch</li>
 					<li>4.详情 —— 判断兑换方式 或 环保值</li>
-					<li>5.下单页 —— 获取授权地址</li>
+					<li>
+						5.下单页 —— 
+							1)修改标题 my.setNavigationBar({reset:ture,title:res.name})
+					1		2)获取授权地址</li>
 				</ul>
 			</dd>
 			<dd>
@@ -70,14 +85,6 @@
 			</dd>
 			<dd>
 				<h4>百度小程序——回收牛手机回收牛</h4>
-				<p>技术栈：</p>
-				<ul>
-					<li>1.底部弹出 —— iOS 挡住自定义菜单栏，解决使用coverview</li>
-					<li>2.自定义底部菜单栏</li>
-					<li>3.自定义顶部导航 标题</li>
-					<li>4.详情 —— 判断兑换方式 或 环保值</li>
-					<li>5.下单页 —— 获取授权地址</li>
-				</ul>
 			</dd>
 			<dd>
 				<h4>后台管理系统</h4>
